--- a/aula13/modelo/estilo.css
+++ b/aula13/modelo/estilo.css
@@ -27,11 +27,11 @@ main {
 }
 
 .section {
-    padding-left: 15px
+    padding-left: 15px;
 }
 
 .aside {
-    padding-left: 15px
+    padding-left: 15px;
 }
 
 footer {
